Add structure and content to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,68 @@
 </head>
 
 <body>
-
+    <nav>
+        <h6>Header Logo</h6>
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </nav>
+    <section id="hero">
+        <section>
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
+                lower contrast</p>
+            <button>Sign up</button>
+        </section>
+        <div class="hero-img">
+            <div class="hero-img-pholder">
+                <p>This is a placeholder for an image</p>
+            </div>
+        </div>
+    </section>
+    <main>
+        <section id="random_info">
+            <article>
+                <div class="some_ran_header">
+                    <h2>Some random information</h2>
+                </div>
+                <div class="some_rando_cards">
+                    <div class="rando_cards">
+                        <div class="card_img_holder"></div>
+                        <p>this is some subtext under and illustration</p>
+                    </div>
+                    <div class="rando_cards">
+                        <div class="card_img_holder"></div>
+                        <p>this is some subtext under and illustration</p>
+                    </div>
+                    <div class="rando_cards">
+                        <div class="card_img_holder"></div>
+                        <p>this is some subtext under and illustration</p>
+                    </div>
+                    <div class="rando_cards">
+                        <div class="card_img_holder"></div>
+                        <p>this is some subtext under and illustration</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section id="quote_block">
+            <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space,
+                or maybe people will actually read it. Who knows? All I know is that it looks nice</blockquote>
+            <cite>-Thor, God of Thunder</cite>
+        </section>
+        <section id="CTA">
+            <aside>
+                <div class="cta-content">
+                    <h4>Call to action! It's time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign Up</button>
+            </aside>
+        </section>
+    </main>
 </body>
 
 </html>
