--- a/index.html
+++ b/index.html
@@ -9,26 +9,31 @@
 </head>
 
 <body>
-    <nav>
-        <h6>Header Logo</h6>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-    </nav>
     <section id="hero">
-        <section>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
-                lower contrast</p>
-            <button>Sign up</button>
-        </section>
-        <div class="hero-img">
-            <div class="hero-img-pholder">
-                <p>This is a placeholder for an image</p>
+        <nav>
+            <h4>Header Logo</h4>
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
+        </nav>
+
+        <section class="hero_content">
+            <div class="hero_cta">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is
+                    lower contrast</p>
+                <button>Sign up</button>
             </div>
-        </div>
+            <div class="hero-img">
+                <div class="hero-img-plc_holder">
+                    <p>this is a placeholder for an image</p>
+                </div>
+            </div>
+        </section>
+    </section>
     </section>
     <main>
         <section id="random_info">
@@ -39,31 +44,37 @@
                 <div class="some_rando_cards">
                     <div class="rando_cards">
                         <div class="card_img_holder"></div>
-                        <p>this is some subtext under and illustration</p>
+                        <p>this is some subtext under and illustration or image</p>
                     </div>
                     <div class="rando_cards">
                         <div class="card_img_holder"></div>
-                        <p>this is some subtext under and illustration</p>
+                        <p>this is some subtext under and illustration or image</p>
                     </div>
                     <div class="rando_cards">
                         <div class="card_img_holder"></div>
-                        <p>this is some subtext under and illustration</p>
+                        <p>this is some subtext under and illustration or image</p>
                     </div>
                     <div class="rando_cards">
                         <div class="card_img_holder"></div>
-                        <p>this is some subtext under and illustration</p>
+                        <p>this is some subtext under and illustration or image</p>
                     </div>
                 </div>
             </article>
         </section>
         <section id="quote_block">
-            <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space,
-                or maybe people will actually read it. Who knows? All I know is that it looks nice</blockquote>
-            <cite>-Thor, God of Thunder</cite>
+            <blockquote><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up
+                    space,
+                    or maybe people will actually read it. Who knows? All I know is that it looks
+                    nice
+                </em><cite><strong>-Thor, God
+                        of
+                        Thunder</strong></cite></blockquote>
+
+
         </section>
         <section id="CTA">
-            <aside>
-                <div class="cta-content">
+            <aside class="cta-content">
+                <div class="cta-text">
                     <h4>Call to action! It's time!</h4>
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
@@ -71,6 +82,7 @@
             </aside>
         </section>
     </main>
+    <footer>Copyright &copy; The Odin Project 2021</footer>
 </body>
 
 </html>
