--- a/index.html
+++ b/index.html
@@ -11,26 +11,24 @@
 <body>
     <section id="hero">
         <nav>
-            <h4>Header Logo</h4>
+            <h4>— Blue-Horizon-Café —</h4>
             <ul>
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Reviews</a></li>
+                <li><a href="">About</a></li>
             </ul>
         </nav>
 
         <section class="hero_content">
             <div class="hero_cta">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
-                    is
-                    lower contrast</p>
-                <button>Sign up</button>
+                <h1>Welcome to Blue Horizon Café</h1>
+                <p>Experience modern elegance and Parisian charm. Enjoy our artisanal coffee and gourmet treats in a
+                    stylish, relaxing atmosphere.</p>
+                <button>Explore Menu</button>
             </div>
             <div class="hero-img">
-                <div class="hero-img-plc_holder">
-                    <p>this is a placeholder for an image</p>
-                </div>
+                <img src="./images/blue-horizon-cafe.webp" class="hero-img-plc_holder" width="1000px"
+                    alt="Interior of a café with light and dark gray walls, blue accents, and empty tables and chairs.">
             </div>
         </section>
     </section>
@@ -39,44 +37,53 @@
         <section id="random_info">
             <article>
                 <div class="some_ran_header">
-                    <h2>Some random information</h2>
+                    <h2>This Season's Favorites</h2>
                 </div>
                 <div class="some_rando_cards">
                     <div class="rando_cards">
-                        <div class="card_img_holder"></div>
-                        <p>this is some subtext under and illustration or image</p>
+                        <div class="card_img_holder">
+                            <img src="./images/cuppaccino.webp"
+                                alt="A cup of coffee with heart-shaped latte art in a modern café" width="120px">
+                        </div>
+                        <p><strong>Cappuccino</strong></p>
                     </div>
                     <div class="rando_cards">
-                        <div class="card_img_holder"></div>
-                        <p>this is some subtext under and illustration or image</p>
+                        <div class="card_img_holder">
+                            <img src="./images/rasberry-cheesecake.webp"
+                                alt="A slice of cheesecake with berry sauce and mint leaves in a café" width="120px">
+                        </div>
+                        <p><strong>Cheesecake with Berry Compote</strong></p>
                     </div>
                     <div class="rando_cards">
-                        <div class="card_img_holder"></div>
-                        <p>this is some subtext under and illustration or image</p>
+                        <div class="card_img_holder">
+                            <img src="./images/breakfast-bowl.webp"
+                                alt="An acai smoothie bowl with berries, banana slices, granola, and honey."
+                                width="120px">
+                        </div>
+                        <p><strong>Acai Smoothie Bowl</strong></p>
                     </div>
                     <div class="rando_cards">
-                        <div class="card_img_holder"></div>
-                        <p>this is some subtext under and illustration or image</p>
+                        <div class="card_img_holder">
+                            <img src="./images/avo-toast.webp"
+                                alt="Avocado toast with sliced radishes and tomatoes in a café" width="120px">
+                        </div>
+                        <p><strong>Gourmet Avocado Toast</strong></p>
                     </div>
                 </div>
             </article>
         </section>
         <section id="quote_block">
-            <blockquote><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up
-                    space,
-                    or maybe people will actually read it. Who knows? All I know is that it looks
-                    nice
-                </em><cite><strong>-Thor, God
-                        of
-                        Thunder</strong></cite></blockquote>
+            <blockquote><em>I had a great time at Blue Horizon Café; the vibe was super chill and the coffee was
+                    amazing. It’s definitely a cool spot to hang out and enjoy a fantastic cup of joe.
+                </em><cite><strong>-Sofia Nilsen</strong></cite></blockquote>
 
 
         </section>
         <section id="CTA">
             <aside class="cta-content">
                 <div class="cta-text">
-                    <h4>Call to action! It's time!</h4>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <h4>Come dream about your horizon</h4>
+                    <p>Buy 3 coffees, get 1 free</p>
                 </div>
                 <button>Sign Up</button>
             </aside>
